# sam3_bb_gb_generator

./: CMakeLists.txt  README.md
.github/workflows/: release.yaml
DL用/kanade-SAM.au2pkg/Plugin/: sam3-kaizo.aux2  sam3mask-kaizo.mod2
DL用/kanade-SAM.au2pkg/Plugin/SAM3-kaizo/: sam3-kaizo.aux2
DL用/kanade-SAM.au2pkg/Plugin/SAM3-kaizo/Python/: pyproject.toml  sam3_gradio_job.py  sam3_gradio_job_kaizo.py
DL用/kanade-SAM.au2pkg/Script/SAM3-kaizo/: SAM3color-kaizo.anm2  SAM3mask-kaizo.anm2  sam3mask-kaizo.mod2
aviutl2_sdk/: config2.h  filter2.h  input2.h  logger2.h  module2.h  output2.h  plugin2.h
cpp/: sam3_aux2.cpp  sam3mask.cpp
lua/: SAM3mask.anm2
python/: pyproject.toml  sam3_gradio_job.py  sam3_gradio_job_kaizo.py
